[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ishan Manchanda", email = "ishanmanchanda70@gmail.com"},
]
dependencies = [
    "dnspython==2.1.0",
    "Flask==2.0.1",
    "gunicorn==20.1.0",
    "pymongo==3.12.0",
    "pypertrail==1.0.0",
    "python-dotenv==0.18.0",
    "pytz==2021.1",
    "redis==3.5.3",
    "requests==2.26.0",
    "rq==1.9.0"
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "dankbot-stats.herokuapp.com"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = []
