[tool.poetry]
name = "dankbot-stats"
version = "0.1.0"
description = ""
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.6"
dnspython = "^2.2.0"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
pymongo = "^3.12.0"
pypertrail = "^1.0.0"
python-dotenv = "^0.19.1"
pytz = "^2021.3"
redis = "^3.5.3"
requests = "^2.26.0"
rq = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
