[tool.poetry]
name = "dankbot-stats"
version = "0.1.0"
description = ""
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.6"
dnspython = "^2.2.1"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
pymongo = "^4.2.0"
pypertrail = "^1.0.0"
python-dotenv = "^0.21.0"
pytz = "^2023.2"
redis = "^4.3.4"
requests = "^2.28.1"
rq = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
